Resize hero image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Eleventh Embodiment</title>
     <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
   </head>
+
   <body>
     <header>
       <!---------Navigation Bar ---------------------------------------------------------------------->
@@ -42,7 +43,6 @@
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
-          
         </button>
         <div class="collapse navbar-collapse" id="navbarIcon">
           <ul class="navbar-nav ml-auto menucontainer">
@@ -57,13 +57,13 @@
               >
             </li>
             <li class="nav-item menuitem grow">
-              <a class="nav-link" href="gallery.html"
-                >Gallery<span class="sr-only">(current)</span></a
+              <a class="nav-link" href="events.html"
+                >Events<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item menuitem grow">
-              <a class="nav-link" href="events.html"
-                >Events<span class="sr-only">(current)</span></a
+              <a class="nav-link" href="gallery.html"
+                >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item menuitem grow">
@@ -106,27 +106,27 @@
       </div>
       <div class="row">
         <div class="col-12 col-md-5 owner-img">
-          <img class="img-fluid" src="assets/images/namaste1.jpg" />
+          <img class="img-fluid" src="assets/images/namaste1.jpg" alt="woman in red dress meditating" />
         </div>
 
         <div class="col-12 col-md-7 owner-text">
           <h5>
-              Most people know me as Ana but as a Kundalini teacher I am proud
-              to carry the name Harpreet Seva Kaur.<br /><br />I began my yoga
-              journey 6 yeas ago and have been blessed with many inspiring
-              teachers to support me on my path. I have been practicing
-              Kundalini yoga for the last 6 years and have supplemented my
-              practice with Hatha Raja, Tantra, Bhakti, Yin and other styles.<br /><br />
-              For the past few years I have been traveling and teaching in Bali,
-              Thailand and mostly in Rishikesh, India, where I am based for over
-              2 years now. <br /><br />I am very passionate about stress and
-              anxiety relief through yoga and different healing arts.
-              <br /><br />Through my inward journey towards healing old traumas,
-              I began to experiment with, and facilitate, different healing arts
-              (Reiki, Shamanic Breathwork and Sound Healing)...<br /><br />
-              I look forward to meeting you <br /><br />
-              Sat Nam <i class="fas fa-praying-hands"></i>
-              </h5>
+            Most people know me as Ana but as a Kundalini teacher I am proud to
+            carry the name Harpreet Seva Kaur.<br /><br />I began my yoga
+            journey 6 yeas ago and have been blessed with many inspiring
+            teachers to support me on my path. I have been practicing Kundalini
+            yoga for the last 6 years and have supplemented my practice with
+            Hatha Raja, Tantra, Bhakti, Yin and other styles.<br /><br />
+            For the past few years I have been traveling and teaching in Bali,
+            Thailand and mostly in Rishikesh, India, where I am based for over 2
+            years now. <br /><br />I am very passionate about stress and anxiety
+            relief through yoga and different healing arts. <br /><br />Through
+            my inward journey towards healing old traumas, I began to experiment
+            with, and facilitate, different healing arts (Reiki, Shamanic
+            Breathwork and Sound Healing)...<br /><br />
+            I look forward to meeting you <br /><br />
+            Sat Nam <i class="fas fa-praying-hands"></i>
+          </h5>
           <br />
         </div>
       </div>
@@ -181,7 +181,7 @@
         <div class="col-12 col-md-3">
           <img
             src="assets/images/ana-class.jpg"
-            alt="yoga class"
+            alt="people in yoga class"
             height="400"
             width="500"
           />
@@ -192,7 +192,7 @@
         <div class="col-12 col-md-3">
           <img
             src="assets/images/group.jpg"
-            alt="group of people taking photo together"
+            alt="group of people sitting on the floor"
             height="500"
             width="650"
           />
@@ -228,9 +228,9 @@
           <br />
         </div>
       </div>
-    </section>
-    
-<footer class="container-fluid">
+</section>
+
+    <footer class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
