--- a/contact.html
+++ b/contact.html
@@ -21,18 +21,18 @@
     <header>
       <!---------Navigation Bar ------------->
       <nav class="navbar navbar-expand-lg navbar-style">
-        <a class="navbar-brand" href="index.html">
-          <img
+			<a class="navbar-brand" href="index.html">
+				<img
             src="assets/images/logo-leaf.png"
             width="50"
             height="50"
             class="d-inline-block"
             alt="logo"
             loading="lazy"
-          />
-        </a>
-        <button
-          class="navbar-toggler"
+        /></a>
+
+				<button
+          class="navbar-toggler ml-auto"
           type="button"
           data-toggle="collapse"
           data-target="#navbarIcon"
@@ -40,42 +40,29 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon">
-            <span class="navbar-toggler-icon">
-              <span class="navbar-toggler-icon"> </span>
-            </span>
-          </span>
+          <span class="navbar-toggler-icon"></span>
+          
         </button>
-        <div class="collapse navbar-collapse" id="navbarIcon">
-          <ul class="navbar-nav ml-auto menucontainer">
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="index.html"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="what-i-do.html"
-                >What I Do<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="gallery.html"
-                >Gallery<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="events.html"
-                >Events<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem active grow">
-              <a class="nav-link" href="contact.html"
-                >Contact<span class="sr-only">(current)</span></a
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
+				<div class="collapse navbar-collapse" id="navbarIcon">
+					<ul class="navbar-nav ml-auto menucontainer">
+						<li class="nav-item menuitem  grow">
+							<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="what-i-do.html">What I Do<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="events.html">Events<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem active grow">
+							<a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+						</li>
+					</ul>
+				</div>
+		</nav>
       <!--------------------------------------------------------------------------------->
     </header>
 
@@ -174,10 +161,6 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
+    
   </body>
 </html>
