--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <!---------Navigation Bar ------------->
-      <nav class="navbar navbar-expand-sm navbar-style">
+      <nav class="navbar navbar-expand-lg navbar-style">
         <a class="navbar-brand" href="index.html">
           <img
             src="assets/images/logo-leaf.png"
@@ -29,10 +29,10 @@
             class="d-inline-block"
             alt="logo"
             loading="lazy"
-          />
-        </a>
+        /></a>
+
         <button
-          class="navbar-toggler"
+          class="navbar-toggler ml-auto"
           type="button"
           data-toggle="collapse"
           data-target="#navbarIcon"
@@ -40,11 +40,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon">
-            <span class="navbar-toggler-icon">
-              <span class="navbar-toggler-icon"> </span>
-            </span>
-          </span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarIcon">
           <ul class="navbar-nav ml-auto menucontainer">
@@ -58,14 +54,14 @@
                 >What I Do<span class="sr-only">(current)</span></a
               >
             </li>
-            <li class="nav-item menuitem active grow">
-              <a class="nav-link" href="gallery.html"
-                >Gallery<span class="sr-only">(current)</span></a
-              >
-            </li>
             <li class="nav-item menuitem grow">
               <a class="nav-link" href="events.html"
                 >Events<span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item menuitem active grow">
+              <a class="nav-link" href="gallery.html"
+                >Gallery<span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item menuitem grow">
@@ -101,55 +97,55 @@
           />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/circle.jpg" alt="yoga class" />
+          <img src="assets/images/circle.jpg" alt="people standing in a circle" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/friends.png" alt="yoga class" />
+          <img src="assets/images/friends.png" alt="people lying on the floor laughing" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/girls.png" alt="yoga class" />
+          <img src="assets/images/girls.png" alt="three girls dressed in white hugging" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/outside.jpg" alt="yoga class" />
+          <img src="assets/images/outside.jpg" alt="group of people having ceremony outside" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/playing.png" alt="yoga class" />
+          <img src="assets/images/playing.png" alt="woman sitting in nature playing an instrument" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/dress.jpg" alt="yoga class" />
+          <img src="assets/images/dress.jpg" alt="woman in a red dress" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/river.jpg" alt="yoga class" />
+          <img src="assets/images/river.jpg" alt="woman knealing beside the river" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/reiki.jpg" alt="yoga class" />
+          <img src="assets/images/reiki.jpg" alt="man lying down with womans hands on his chest" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/hand.jpg" alt="yoga class" />
+          <img src="assets/images/hand.jpg" alt="woman holding a little pyramid in her hands" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/pose1.jpg" alt="yoga class" />
+          <img src="assets/images/pose1.jpg" alt="woman in a standing yoga pose in front of a monument" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/pose.jpg" alt="yoga class" />
+          <img src="assets/images/pose.jpg" alt="woman in nature doing a standing yoga pose" />
         </div>
         <div class="col-6 col-md-3">
           <img src="assets/images/class.jpg" alt="yoga class" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/nature.jpg" alt="yoga class" />
+          <img src="assets/images/nature.jpg" alt="woman in a white dress with open hands" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/mountain1.jpg" alt="yoga class" />
+          <img src="assets/images/mountain1.jpg" alt="woman sitting on a montain in a yoga pose" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/ana-bnw.jpg" alt="yoga class" />
+          <img src="assets/images/ana-bnw.jpg" alt="black and white portrait of a woman" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/cobra.png" alt="yoga class" />
+          <img src="assets/images/cobra.png" alt="woman doing a cobra pose in nature" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/namaste.png" alt="yoga class" />
+          <img src="assets/images/namaste.png" alt="woman in red dress meditating" />
         </div>
       </div>
     </section>
@@ -205,10 +201,6 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
+   
   </body>
 </html>
