Add media queries for what-i-do.html

--- a/gallery.html
+++ b/gallery.html
@@ -20,11 +20,11 @@
   <body>
     <header>
       <!---------Navigation Bar ------------->
-      <nav class="navbar navbar-expand-lg navbar-style">
+      <nav class="navbar navbar-expand-lg navbar-style navbar-light">
         <a class="navbar-brand" href="index.html">
           <img
             src="assets/images/logo-leaf.png"
-            width="50"
+            width="55"
             height="50"
             class="d-inline-block"
             alt="logo"
@@ -74,7 +74,9 @@
       </nav>
       <!--------------------------------------------------------------------------------->
     </header>
-
+<h3 class="title-text">Gallery</h3>
+<hr class="hr-large">
+<br/>
     <section class="container-fluid photos">
       <div class="row">
         <div class="col-6 col-md-3">
