--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
   <body>
     <header>
       <!---------Navigation Bar ------------->
-      <nav class="navbar navbar-expand-lg navbar-style">
+      <nav class="navbar navbar-expand-lg navbar-style navbar-light">
 			<a class="navbar-brand" href="index.html">
 				<img
             src="assets/images/logo-leaf.png"
-            width="50"
+            width="55"
             height="50"
             class="d-inline-block"
             alt="logo"
