Update wireframe for events.html

--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,9 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       type="text/css"
     />
+
+    <link rel="stylesheet" type="text/css" href="jquery.fancybox.min.css">
+
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
     <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
@@ -77,6 +80,20 @@
 <h3 class="title-text">Gallery</h3>
 <hr class="hr-large">
 <br/>
+
+<p class="imglist" style="max-width: 1000px;">
+  <a href="assets/images/ana-class.jpg/500x400" height="400" width="500" data-fancybox="images" data-caption="yoga class">
+    <img src="assets/images/ana-class.jpg" />
+  </a>
+
+  <a href="https://source.unsplash.com/eWFdaPRFjwE/1500x1000" data-fancybox="images" data-caption="Mallorca, Llubí, Spain">
+    <img src="https://source.unsplash.com/eWFdaPRFjwE/240x160" />
+  </a>
+</p>
+
+
+
+
     <section class="container-fluid photos">
       <div class="row">
         <div class="col-6 col-md-3">
