--- a/events.html
+++ b/events.html
@@ -3,75 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
     <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
   </head>
   <body>
     <header>
-      <!---------Navigation Bar ------------->
-      <nav class="navbar navbar-expand-lg navbar-style navbar-light">
-        <a class="navbar-brand" href="index.html">
-          <img
-            src="assets/images/logo-leaf.png"
-            width="55"
-            height="50"
-            class="d-inline-block"
-            alt="logo"
-            loading="lazy"
-        /></a>
+      <!-- ================== Navigation Bar ======================================================================= -->
 
-        <button
-          class="navbar-toggler ml-auto"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarIcon"
-          aria-controls="navbarIcon"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarIcon">
-          <ul class="navbar-nav ml-auto menucontainer">
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="index.html"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="what-i-do.html"
-                >What I Do<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem active grow">
-              <a class="nav-link" href="events.html"
-                >Events<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="gallery.html"
-                >Gallery<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="contact.html"
-                >Contact<span class="sr-only">(current)</span></a
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!--------------------------------------------------------------------------------->
+      <nav class="navbar navbar-expand-lg navbar-style navbar-light">
+			<a class="navbar-brand" href="index.html">
+				<img src="assets/images/logo-leaf.png" width="55" height="50" class="d-inline-block" alt="logo" loading="lazy"/></a>
+				<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarIcon" aria-controls="navbarIcon"
+                  aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                </button>
+				<div class="collapse navbar-collapse" id="navbarIcon">
+					<ul class="navbar-nav ml-auto menucontainer">
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="what-i-do.html">What I Do<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem active grow">
+							<a class="nav-link" href="events.html">Events<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+						</li>
+					</ul>
+				</div>
+		</nav>
+    <!-- ================== End Navigation Bar ======================================================================= -->
     </header>
 
     <h2 class="events-title">Upcoming Retreats</h2>
@@ -103,7 +71,7 @@
           </p>
         </div>
         <div class="col-12 col-md-6">
-          <!-------------Code to insert video borrowed from W3schools - link https://www.w3schools.com/html/html5_video.asp--------->
+          <!-- ======= Code to insert video borrowed from W3schools - link in README.md file ===== -->
           <div class="video-position">
             <video width="600" height="450" controls>
               <source src="assets/video/retreat.mp4" type="video/mp4" />
@@ -163,7 +131,7 @@
   </div>    
     </section>
 
-    <section class="container-fluid">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-4">
           <img
@@ -190,7 +158,7 @@
           />
         </div>
       </div>
-    </section>
+    </div>
 
    
 
@@ -259,42 +227,38 @@
       </div>
     </section>
 
+  <!-- ================== Footer  ======================================================================= -->
+
     <footer class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
-          <h5>
-            <i class="fa fa-envelope"></i>
-            <a href="contact.html">harpreet@elem.com</a>
-          </h5>
-          <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702</h5>
-          <h5>
-            <i class="fa fa-instagram"></i
-            ><a href="instagram.com"> @eleventh_embodiment</a>
-          </h5>
+            <h5><i class="fa fa-envelope"></i><a href="contact.html">harpreet@elem.com</a>
+            </h5>
+            <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
+            </h5>
+            <h5><i class="fa fa-instagram"></i><a href="instagram.com"> @eleventh_embodiment</a>
+            </h5>
         </div>
         <div class="col-12 col-md-6 follow-heading">
           <h4>Follow Me:</h4>
           <ul class="social-media">
             <li>
-              <a href="https://www.facebook.com" target="_blank"
-                ><i class="fa fa-facebook"></i
-              ></a>
+              <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
-              <a href="https://www.youtube.com" target="_blank"
-                ><i class="fa fa-youtube"></i
-              ></a>
+              <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
             </li>
             <li>
-              <a href="https://www.instagram.com" target="_blank"
-                ><i class="fa fa-instagram"></i
-              ></a>
+              <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
             </li>
           </ul>
         </div>
       </div>
     </footer>
+     <!-- ================== End Footer  ======================================================================= -->
+    
+    <!-- ================== Scripts  ======================================================================= -->
         <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -310,5 +274,6 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
+    <!-- ================== End Scripts  ======================================================================= -->
   </body>
 </html>
