--- a/gallery.html
+++ b/gallery.html
@@ -3,84 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-      type="text/css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      type="text/css"
-    />
-
-    <link rel="stylesheet" type="text/css" href="jquery.fancybox.min.css">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
     <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
   </head>
   <body>
     <header>
-      <!---------Navigation Bar ------------->
-      <nav class="navbar navbar-expand-lg navbar-style navbar-light">
-        <a class="navbar-brand" href="index.html">
-          <img
-            src="assets/images/logo-leaf.png"
-            width="55"
-            height="50"
-            class="d-inline-block"
-            alt="logo"
-            loading="lazy"
-        /></a>
 
-        <button
-          class="navbar-toggler ml-auto"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarIcon"
-          aria-controls="navbarIcon"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarIcon">
-          <ul class="navbar-nav ml-auto menucontainer">
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="index.html"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="what-i-do.html"
-                >What I Do<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="events.html"
-                >Events<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem active grow">
-              <a class="nav-link" href="gallery.html"
-                >Gallery<span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item menuitem grow">
-              <a class="nav-link" href="contact.html"
-                >Contact<span class="sr-only">(current)</span></a
-              >
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <!--------------------------------------------------------------------------------->
+      <!-- ==================== Navigation Bar ================================================================== -->
+
+      <nav class="navbar navbar-expand-lg navbar-style navbar-light">
+			<a class="navbar-brand" href="index.html">
+				<img src="assets/images/logo-leaf.png" width="55" height="50" class="d-inline-block" alt="logo" loading="lazy"/></a>
+				<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarIcon" aria-controls="navbarIcon"
+                  aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                </button>
+				<div class="collapse navbar-collapse" id="navbarIcon">
+					<ul class="navbar-nav ml-auto menucontainer">
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="what-i-do.html">What I Do<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="events.html">Events<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem ctive grow">
+							<a class="nav-link" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item menuitem grow">
+							<a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+						</li>
+					</ul>
+				</div>
+		</nav>
+     <!-- ==================== End Navigation Bar ================================================================== -->
     </header>
+
 <h3 class="title-text">Gallery</h3>
+
 <hr class="hr-large">
 <br/>
-
+<!-- ====Fancybox ===== 
 <p class="imglist" style="max-width: 1000px;">
   <a href="assets/images/ana-class.jpg/500x400" height="400" width="500" data-fancybox="images" data-caption="yoga class">
     <img src="assets/images/ana-class.jpg" />
@@ -90,11 +57,11 @@
     <img src="https://source.unsplash.com/eWFdaPRFjwE/240x160" />
   </a>
 </p>
+====Fancybox ===== -->
 
+ <!-- ==================== Images ================================================================== -->
 
-
-
-    <section class="container-fluid photos">
+    <div class="container-fluid photos">
       <div class="row">
         <div class="col-6 col-md-3">
           <img
@@ -167,44 +134,43 @@
           <img src="assets/images/namaste.png" alt="woman in red dress meditating" />
         </div>
       </div>
-    </section>
+    </div>
+
+    <!-- ==================== End Images ================================================================== -->
+
+    <!-- ==================== Footer  ===================================================================== -->
 
     <footer class="container-fluid">
       <div class="row">
         <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
-          <h5>
-            <i class="fa fa-envelope"></i>
-            <a href="contact.html">harpreet@elem.com</a>
-          </h5>
-          <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702</h5>
-          <h5>
-            <i class="fa fa-instagram"></i
-            ><a href="instagram.com"> @eleventh_embodiment</a>
-          </h5>
+            <h5><i class="fa fa-envelope"></i><a href="contact.html">harpreet@elem.com</a>
+            </h5>
+            <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
+            </h5>
+            <h5><i class="fa fa-instagram"></i><a href="instagram.com"> @eleventh_embodiment</a>
+            </h5>
         </div>
         <div class="col-12 col-md-6 follow-heading">
           <h4>Follow Me:</h4>
           <ul class="social-media">
             <li>
-              <a href="https://www.facebook.com" target="_blank"
-                ><i class="fa fa-facebook"></i
-              ></a>
+              <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
             </li>
             <li>
-              <a href="https://www.youtube.com" target="_blank"
-                ><i class="fa fa-youtube"></i
-              ></a>
+              <a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube"></i></a>
             </li>
             <li>
-              <a href="https://www.instagram.com" target="_blank"
-                ><i class="fa fa-instagram"></i
-              ></a>
+              <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
             </li>
           </ul>
         </div>
       </div>
     </footer>
+     <!-- ==================== End Footer ================================================================== -->
+    
+     <!-- ==================== Scripts ===================================================================== -->
+    
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -220,6 +186,6 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
-   
+    <!-- ==================== End Scripts ================================================================== -->
   </body>
 </html>
