Add more details to methods section of home page

--- a/gallery.html
+++ b/gallery.html
@@ -43,9 +43,9 @@
      <!-- ==================== End Navigation Bar ================================================================== -->
     </header>
 
-<h3 class="title-text">Gallery</h3>
+<h2 class="page-header">Gallery</h2>
 
-<hr class="hr-large">
+
 <br/>
 <!-- ====Fancybox ===== 
 <p class="imglist" style="max-width: 1000px;">
