--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
     <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
@@ -44,16 +44,16 @@
     <div class="hero-outer">
       <div class="container-fluid hero-container"></div>
     </div>
-    <div class="container about-container">
+    <div class="container-fluid about-container">
       <section class="row about">
-        <div class="col-12">
-          <h3 class="title-text">Eleventh  Embodiment</h3>
+        <div class="col-11">
+          <h3 class="title-text-about">Eleventh  Embodiment</h3>
           <br />
           <h4 class="about">
             Human body is made up of ten bodies: the physical body, three mental
-            bodies and six energy bodies. The eleventh embodiment is a pure
+            bodies and six energy bodies. <br />The eleventh embodiment is a pure
             state of consciousness when all ten bodies are under your direction.
-            Then you have the ability to see all events as part of Divine’s plan
+            <br />Then you have the ability to see all events as part of Divine’s plan
             and see Divine in everything.
           </h4>
         </div>
@@ -61,7 +61,7 @@
     </div>
 
 
-<hr class="hr-large">
+
 
 <!-- ========================== My Story and Experience =================================================== -->
     <section class="container owner-container">
@@ -97,7 +97,7 @@
         </div>
       </div>
     </section>
-
+<hr class="hr-small">
     <section class="container experience">
       <div class="row">
         <div class="col-12">
@@ -149,11 +149,12 @@
     <h3 class="title-text">Methods I use in my practice</h3>
 
     <div class="row kundalini">
-       <div class="col-12 col-md-2 yoga-img">
-           <img src="assets/images/kundalini.jpg" height="250" width="200" alt="woman practicing yoga">
+         <div class="col-12 col-md-2 yoga-img">
+             <img src="assets/images/kundalini.jpg" height="250" width="200" alt="woman practicing yoga">
        </div>
-       <div class="col-12 col-md-8 yoga-text">
+         <div class="col-12 col-md-8 yoga-text">
             <h5>Kundalini Yoga</h5>
+            <br/>
                  <p>The ancient yoga practice focuses on breath and asana (postures) along with chanting, meditation, and singing.
                     Practice to increase your self-awareness by silencing your mind and unblocking your chakras so that your vital energy
                     can flow freely. Some of the most popular health benefits of Kundalini include a faster metabolism, better mood, and 
@@ -164,12 +165,13 @@
         </div>
     </div>  
 
-    <div class="row">
+      <div class="row">
         <div class="col-12 col-md-2 yoga-img">
            <img src="assets/images/yin.jpg" height="250" width="200" alt="woman practicing yoga">
         </div>
         <div class="col-12 col-md-8 yoga-text">
             <h5>Yin Yoga</h5>
+            <br/>
                 <p>
                     Yin Yoga is a slow-paced style of yoga as exercise, incorporating principles 
                     of traditional Chinese medicine, with asanas (postures) that are held for longer periods of time than in other styles.<br/>
@@ -178,6 +180,40 @@
                 <a class="btn yoga-btn" href="what-i-do.html">Learn More</a>
         </div>
     </div>  
+
+      <div class="row">
+        <div class="col-12 col-md-2 yoga-img">
+           <img src="assets/images/healing.jpg" height="250" width="200" alt="woman practicing yoga">
+        </div>
+        <div class="col-12 col-md-8 yoga-text">
+            <h5>Reiki</h5>
+            <br/>
+                <p>
+                    A treatment feels like a wonderful glowing radiance that flows through and around you. 
+                    Reiki treats the whole person including body, emotions, mind and spirit creating many beneficial 
+                    effects that include relaxation and feelings of peace, security and wellbeing.
+                </p>
+                <br/>
+                <a class="btn yoga-btn" href="what-i-do.html">Learn More</a>
+        </div>
+    </div>
+
+     <div class="row">
+        <div class="col-12 col-md-2 yoga-img">
+           <img src="assets/images/shaman.jpg" height="250" width="200" alt="woman practicing yoga">
+        </div>
+        <div class="col-12 col-md-8 yoga-text">
+            <h5>Shamanic Breathwork</h5>
+            <br/>
+                <p>
+                  We use the breath as a tool to go into expanded states. The breath has the ability to alter your consciousness, 
+                  calm your physical body and still the mental chatter of your mind. We do this through Breath, Music, & Movement.
+                  Within each one of us resides an inner Shaman, our inner healer, a higher consciousness and wisdom that knows how 
+                  to heal and how to transform. 
+                </p>
+                <a class="btn yoga-btn" href="what-i-do.html">Learn More</a>
+        </div>
+    </div>
 <!-- ================== End Methods I Use ======================================================================== -->
    
 <hr class="hr-large">
@@ -200,7 +236,7 @@
       <div class="row">
         <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
-            <h5><i class="fa fa-envelope"></i><a href="contact.html">harpreet@elem.com</a>
+            <h5><i class="fa fa-envelope"></i><a href="contact.html"> harpreet@elem.com</a>
             </h5>
             <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
             </h5>
