Fixed media queries for index.html

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
          </div>
        </div>
       <div class="row">
-         <div class="col-12 col-md-5 owner-img">
+         <div class="col-12 col-lg-6 owner-img">
            <img class="img-fluid" src="assets/images/namaste1.jpg" alt="woman in red dress meditating" />
          </div>
 
-        <div class="col-12 col-md-7 owner-text">
+        <div class="col-12 col-lg-6 owner-text">
           <h5>
             Most people know me as Ana but as a Kundalini teacher I am proud to
             carry the name Harpreet Seva Kaur.<br /><br />I began my yoga
@@ -149,10 +149,10 @@
     <h3 class="title-text">Methods I use in my practice</h3>
 
     <div class="row kundalini">
-         <div class="col-12 col-md-2 yoga-img">
+         <div class="col-12  d-md-none d-lg-inline-block col-lg-2 col-xl-2 yoga-img">
              <img src="assets/images/kundalini.jpg" height="250" width="200" alt="woman practicing yoga">
        </div>
-         <div class="col-12 col-md-8 yoga-text">
+         <div class="col-11 col-lg-7 offset-lg-1 col-xl-8 yoga-text">
             <h5>Kundalini Yoga</h5>
             <br/>
                  <p>The ancient yoga practice focuses on breath and asana (postures) along with chanting, meditation, and singing.
@@ -166,10 +166,10 @@
     </div>  
 
       <div class="row">
-        <div class="col-12 col-md-2 yoga-img">
+        <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
            <img src="assets/images/yin.jpg" height="250" width="200" alt="woman practicing yoga">
         </div>
-        <div class="col-12 col-md-8 yoga-text">
+        <div class="col-12 col-md-11 col-lg-7 offset-lg-1  yoga-text">
             <h5>Yin Yoga</h5>
             <br/>
                 <p>
@@ -182,10 +182,10 @@
     </div>  
 
       <div class="row">
-        <div class="col-12 col-md-2 yoga-img">
+        <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
            <img src="assets/images/healing.jpg" height="250" width="200" alt="woman practicing yoga">
         </div>
-        <div class="col-12 col-md-8 yoga-text">
+        <div class="col-12 col-md-11 col-lg-7 offset-lg-1 yoga-text">
             <h5>Reiki</h5>
             <br/>
                 <p>
@@ -199,10 +199,10 @@
     </div>
 
      <div class="row">
-        <div class="col-12 col-md-2 yoga-img">
+        <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
            <img src="assets/images/shaman.jpg" height="250" width="200" alt="woman practicing yoga">
         </div>
-        <div class="col-12 col-md-8 yoga-text">
+        <div class="col-12 col-md-11 col-lg-7 offset-lg-1 yoga-text">
             <h5>Shamanic Breathwork</h5>
             <br/>
                 <p>
@@ -221,7 +221,7 @@
 
     <section class="container">
         <div class="row">
-             <div class="col-12 col-md-12 online-session">
+             <div class="col-12 col-md-11 col-lg-6 col-xl-12 online-session">
                <h3 class="book-session-text">See Upcoming Events</h3>
                <br />
                <a class="btn btn-book" href="events.html">See Events</a>
