--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </li>
 
               <li>
-                200 Hour Kundalini Yoga Teacher Training Essential Yoga Studio
+                200 Hour Kundalini Teacher Training, Essential Studio<br />
                 Rishikesh, India, September 2015
               </li>
 
@@ -149,7 +149,7 @@
     <h3 class="title-text">Methods I use in my practice</h3>
 
     <div class="row kundalini">
-         <div class="col-12  d-md-none d-lg-inline-block col-lg-2 col-xl-2 yoga-img">
+         <div class="col-12 d-sm-none col-md- d-lg-inline-block col-lg-2 col-xl-2 yoga-img">
              <img src="assets/images/kundalini.jpg" height="250" width="200" alt="woman practicing yoga">
        </div>
          <div class="col-12 col-lg-7 offset-lg-1 col-xl-8 yoga-text">
@@ -262,47 +262,7 @@
      <!-- ================ End Footer ============================================================================= -->
     
 
-    <!-- ========= Modal =========================================================================================== -->
-
-    <!-- Code for modal borrowed from Bootstrap and amended to suit the look of the page -->
-
-    <div class="modal" tabindex="-1" role="dialog" id="bookClassModal">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Create Account to Book your Class</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <form class="form-style">
-             <div class="form-group">
-                <label for="exampleInputFullName">Full Name</label><br />
-                <input type="text" class="form-Modalcontrol" id="exampleInputFullName" aria-label="nameHelp" required />
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Email address</label><br />
-                <input type="email" class="form-Modalcontrol" id="exampleInputEmail1" aria-describedby="emailHelp" required />
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword">Password</label><br />
-              <input type="password" class="form-Modalcontrol" id="exampleInputPassword" required />
-            </div>
-            <div class="form-group">
-              <label for="exampleInputPassword1">Repeat Password</label><br />
-              <input type="password" class="form-Modalcontrol" id="exampleInputPassword1" required />
-            </div>
-            <button type="submit" class="btn btn-secondary btn-form-modal">
-              Submit
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-    <!-- =============== Modal End =============================================================================== -->
-
-    <!-- ================ Scripts ================================================================================ -->
+     <!-- ================ Scripts ================================================================================ -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
