Edit events page and change some design decisions

--- a/gallery.html
+++ b/gallery.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body>
+    <!-- === Page Border === -->
+    <div id="left"></div>
+    <div id="right"></div>
+    <div id="top"></div>
+   <!-- === End Page Border === -->
+    
     <header>
 
       <!-- ==================== Navigation Bar ================================================================== -->
 
-      <nav class="navbar navbar-expand-lg navbar-style navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-style navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="assets/images/logo-leaf.png" width="55" height="50" class="d-inline-block" alt="logo" loading="lazy"/></a>
+				<img src="assets/images/logo-leaf.png" width="75" height="70" class="d-inline-block" alt="logo" loading="lazy"/></a>
 				<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarIcon" aria-controls="navbarIcon"
                   aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                 </button>
@@ -31,7 +37,7 @@
 						<li class="nav-item menuitem grow">
 							<a class="nav-link" href="events.html">Events<span class="sr-only">(current)</span></a>
 						</li>
-						<li class="nav-item menuitem ctive grow">
+						<li class="nav-item menuitem active grow">
 							<a class="nav-link" href="gallery.html">Gallery<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item menuitem grow">
@@ -44,94 +50,71 @@
     </header>
 
 <h2 class="page-header">Gallery</h2>
+ <br/>
 
-
-<br/>
-<!-- ====Fancybox ===== 
-<p class="imglist" style="max-width: 1000px;">
-  <a href="assets/images/ana-class.jpg/500x400" height="400" width="500" data-fancybox="images" data-caption="yoga class">
-    <img src="assets/images/ana-class.jpg" />
-  </a>
-
-  <a href="https://source.unsplash.com/eWFdaPRFjwE/1500x1000" data-fancybox="images" data-caption="Mallorca, Llubí, Spain">
-    <img src="https://source.unsplash.com/eWFdaPRFjwE/240x160" />
-  </a>
-</p>
-====Fancybox ===== -->
-
- <!-- ==================== Images ================================================================== -->
+<!-- ==================== Images ================================================================== -->
 
     <div class="container-fluid photos">
       <div class="row">
         <div class="col-6 col-md-3">
-          <img
-            src="assets/images/ana-class.jpg"
-            alt="yoga class"
-            height="400"
-            width="500"
-          />
+          <img src="assets/images/ana-class.jpg" alt="Yoga class on a rooftop" height="400" width="500"  />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/session.jpg" alt="yoga class" />
+        <img src="assets/images/session.jpg" class="img-fluid" alt="People sitting on the floor practicing yoga" >
         </div>
         <div class="col-6 col-md-3">
-          <img
-            src="assets/images/group.jpg"
-            alt="yoga class"
-            height="500"
-            width="650"
-          />
+          <img src="assets/images/group.jpg" alt="People taking a group picture after a succesful yoga traning" height="500" width="650" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/circle.jpg" alt="people standing in a circle" />
+          <img src="assets/images/circle.jpg" alt="People standing in a circle" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/friends.png" alt="people lying on the floor laughing" />
+          <img src="assets/images/friends.png" alt="People lying on the floor laughing" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/girls.png" alt="three girls dressed in white hugging" />
+          <img src="assets/images/girls.png" alt="Three girls dressed in white hugging" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/outside.jpg" alt="group of people having ceremony outside" />
+          <img src="assets/images/outside.jpg" alt="Group of people performing a yoga ceremony on the beach" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/playing.png" alt="woman sitting in nature playing an instrument" />
+          <img src="assets/images/playing.png" alt="A woman sitting in nature playing an instrument" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/dress.jpg" alt="woman in a red dress" />
+          <img src="assets/images/dress.jpg" alt="A woman in a red dress" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/river.jpg" alt="woman knealing beside the river" />
+          <img src="assets/images/river.jpg" alt="A woman knealing beside the river" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/reiki.jpg" alt="man lying down with womans hands on his chest" />
+          <img src="assets/images/reiki.jpg" alt="A man lying down while a healer has her hands on his chest" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/hand.jpg" alt="woman holding a little pyramid in her hands" />
+          <img src="assets/images/hand.jpg" alt="A woman holding a small crystal pyramid in her hand" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/pose1.jpg" alt="woman in a standing yoga pose in front of a monument" />
+          <img src="assets/images/pose1.jpg" alt="A woman in a standing yoga pose in front of a monument" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/pose.jpg" alt="woman in nature doing a standing yoga pose" />
+          <img src="assets/images/pose.jpg" alt="A woman in nature doing a standing yoga pose" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/class.jpg" alt="yoga class" />
+          <img src="assets/images/class.jpg" alt="People meditating in yoga class" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/nature.jpg" alt="woman in a white dress with open hands" />
+          <img src="assets/images/nature.jpg" alt="A woman in a white dress with open arms" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/mountain1.jpg" alt="woman sitting on a montain in a yoga pose" />
+          <img src="assets/images/mountain1.jpg" alt="A woman sitting on a montain in a yoga pose" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/ana-bnw.jpg" alt="black and white portrait of a woman" />
+          <img src="assets/images/ana-bnw.jpg" alt="Black and white portrait of a woman" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/cobra.png" alt="woman doing a cobra pose in nature" />
+          <img src="assets/images/cobra.png" alt="a woman doing a cobra pose in nature" />
         </div>
         <div class="col-6 col-md-3">
-          <img src="assets/images/namaste.png" alt="woman in red dress meditating" />
+          <img src="assets/images/namaste.png" alt="A woman in red dress meditating" />
         </div>
       </div>
     </div>
@@ -144,7 +127,7 @@
       <div class="row">
         <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
-            <h5><i class="fa fa-envelope"></i><a href="contact.html">harpreet@elem.com</a>
+            <h5><i class="fa fa-envelope"></i><a href="contact.html"> harpreet@elem.com</a>
             </h5>
             <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
             </h5>
@@ -187,5 +170,6 @@
       crossorigin="anonymous"
     ></script>
     <!-- ==================== End Scripts ================================================================== -->
+   
   </body>
 </html>
