--- a/what-i-do.html
+++ b/what-i-do.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body>
+   <div id="left"></div>
+<div id="right"></div>
+<div id="top"></div>
+
     <header>
       <!-- ==============Navigation Bar =============================================================== -->
 
       <nav class="navbar navbar-expand-lg navbar-style navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="assets/images/logo-leaf.png" width="55" height="50" class="d-inline-block" alt="logo" loading="lazy"/></a>
+				<img src="assets/images/logo-leaf.png" width="75" height="70" class="d-inline-block" alt="logo" loading="lazy"/></a>
 				<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarIcon" aria-controls="navbarIcon"
                   aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                 </button>
@@ -50,18 +54,19 @@
 <div class="container header-container">
     <div class="row">
         <div class="col-12 offset-2 what-img">
-            <img src="assets/images/hand.jpg" alt="woman holding a pyramid ih her hand" height="500" width="750" class="img-fluid" />
+            <img src="assets/images/hand.jpg" alt="A woman holding a crystal pyramid ih her hand" height="500" width="750" class="img-fluid" />
         </div>
         </div>
         <div class="row">
-        <div class="col-12  ">
-            <div class="methods-text">
+        <div class="col">
+            <div class="methods-text text-center">
             <i>
                Here you can find more information about each of the methods I use in my yoga and healing practice.
                If you are not sure which one is best suited for you, feel free to contact me for advice. 
             </i>
+            <a class="btn btn-advice text-center" href="contact.html">Ask for Advice</a>
             </div>
-            <a class="btn btn-advice" href="contact.html">Ask for Advice</a>
+            
         </div>
     </div>
 </div>
@@ -115,7 +120,7 @@
         </p>
         </div>
         <div class="col-12 col-md-5 col-lg-4 kundalini-img">
-            <img class="img-fluid" src="assets/images/river2.jpg" alt="people sitting on the floor" />
+            <img class="img-fluid" src="assets/images/river2.jpg" alt="A woman meditating beside the river" />
         </div>
         <button type="submit" class="btn btn-secondary btn-class-kundalini" data-toggle="modal" data-target="#bookClassModal">
             Book Class
@@ -149,13 +154,13 @@
   <div class="container-fluid">
       <div class="row">
               <div class="col-12 col-md-4 col-lg-4  yin-img">
-                 <img class="img-fluid" src="assets/images/women-meditating.jpg"  alt="two women meditating">
+                 <img class="img-fluid" src="assets/images/women-meditating.jpg"  alt="Two women meditating">
               </div>
              <div class="col-12 col-md-4 col-lg-4  yin-second-img">
-                 <img class="img-fluid" src="assets/images/studio-pose.jpg" alt="woman practicing yoga">
+                 <img class="img-fluid" src="assets/images/studio-pose.jpg" alt="A woman practicing yoga">
               </div>
                <div class="col-12 col-md-4 col-lg-4  yin-second-img">
-                 <img class="img-fluid" src="assets/images/session.jpg" alt="woman practicing yoga">
+                 <img class="img-fluid" src="assets/images/session.jpg" alt="People during yoga class">
               </div>
       </div>
  </div>
@@ -215,10 +220,10 @@
             </div>
             <div class="row">
                <div class="col-12 col-lg-5 offset-lg-1">
-                   <img class="img-fluid reiki-img" src="assets/images/reiki.jpg" alt="man lying down with womans hands on his chest">
+                   <img class="img-fluid reiki-img" src="assets/images/reiki.jpg" alt="A man lying down while a healer has her hands on his chest">
                </div>
                 <div class="col-12 col-lg-5 ">
-                    <img class="img-fluid reiki-img" src="assets/images/reikii.jpg" alt="man lying down with womans hands on his face">
+                    <img class="img-fluid reiki-img" src="assets/images/reikii.jpg" alt="A man lying down while a healer has her hands on his face">
                 </div>
             </div>
     </section>
@@ -236,7 +241,7 @@
         <div class="col-10  description-text">
             <h5 class="yoga-heading">Shamanic Breathwork</h5>
                 <br />
-                <img class="breathing-img img-fluid" src="assets/images/breath.jpg" alt="drawing of a woman breathing out flowers">
+                <img class="breathing-img img-fluid" src="assets/images/breath.jpg" alt="Drawing of a woman breathing out flowers representing energy flow">
             <p>
                 Powerful breathing technique for emotional and energetic cleansing.
                 A wonderful technique to discover new possibilities for growth/healing/awakening, no matter where you are on your path.
@@ -246,7 +251,8 @@
                 Wrong breathing disturbes physiological functions, blocks ability to express ourselves and determines our behaviour.
                 Shamanic Healing Breathwork is an integrated methode which energises, opens and balances your whole being,
                 supports your body's natural proces for release of the emotional trauma, old restriction patterns chronic and physical & mental tension. 
-            <p />
+            </p>
+            <p>
                 The results are more power, clarity in our life, in our thoughts in our feelings, less addictive attitudes, more self confidence, and fun.
                 It’s is a simple technique, but it's one of the deepest experiences to explore altered states of conciousness, it mimics the effect of DMT experience.
             </p>
@@ -269,10 +275,10 @@
 
     <div class="row">
         <div class="col-12 col-lg-5 offset-1">
-              <img class="shaman-img img-fluid" src="assets/images/two-women.jpg"  alt="two women dancing">
+              <img class="shaman-img img-fluid" src="assets/images/two-women.jpg"  alt="Two women during a shamanic breathwork ceremony">
         </div>
         <div class="col-12 col-lg-5">
-              <img class="shaman-second-img img-fluid" src="assets/images/women-dancing.jpg"  alt="two women dancing">
+              <img class="shaman-second-img img-fluid" src="assets/images/women-dancing.jpg"  alt="Two women during a shamanic breathwork ceremony">
         </div>
    </div>
 </section>
@@ -284,7 +290,7 @@
       <div class="row">
         <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
-            <h5><i class="fa fa-envelope"></i><a href="contact.html">harpreet@elem.com</a>
+            <h5><i class="fa fa-envelope"></i><a href="contact.html"> harpreet@elem.com</a>
             </h5>
             <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
             </h5>
