--- a/contact.html
+++ b/contact.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body>
+  <div id="left"></div>
+<div id="right"></div>
+<div id="top"></div>
     <header>
        <!-- ==================== Navigation Bar ================================================================== -->
 
       <nav class="navbar navbar-expand-lg navbar-style navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="assets/images/logo-leaf.png" width="55" height="50" class="d-inline-block" alt="logo" loading="lazy"/></a>
+				<img src="assets/images/logo-leaf.png" width="75" height="70" class="d-inline-block" alt="logo" loading="lazy"/></a>
 				<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarIcon" aria-controls="navbarIcon"
                   aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                 </button>
@@ -77,7 +80,7 @@
       <div class="row">
         <div class="col-12 col-md-6 contact-heading">
           <h4>Contact me:</h4>
-            <h5><i class="fa fa-envelope"></i><a href="contact.html">harpreet@elem.com</a>
+            <h5><i class="fa fa-envelope"></i><a href="contact.html"> harpreet@elem.com</a>
             </h5>
             <h5><i class="fa fa-phone"></i> +353 (0)85 833 5702
             </h5>
