--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Eleventh Embodiment</title>
-    <link rel="icon" type="image/png" href="assets/images/favicon-leaf.png" />
+    <link rel="icon" type="image/png" href="assets/images/favicon.png" />
   </head>
   <body>
+
+  <div id="left"></div>
+  <div id="right"></div>
+  <div id="top"></div>
+
+
     <header>
       <!-- ==================== Navigation Bar ======================================================================= -->
       <nav class="navbar navbar-expand-lg navbar-style navbar-light">
 			<a class="navbar-brand" href="index.html">
-				<img src="assets/images/logo-leaf.png" width="55" height="50" class="d-inline-block" alt="logo" loading="lazy"/></a>
+				<img src="assets/images/logo-leaf.png" width="75" height="70" class="d-inline-block" alt="logo" loading="lazy"/></a>
 				<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarIcon" aria-controls="navbarIcon"
                   aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
                 </button>
@@ -72,7 +78,7 @@
        </div>
       <div class="row">
          <div class="col-12 col-lg-6 owner-img">
-           <img class="img-fluid" src="assets/images/namaste1.jpg" alt="woman in red dress meditating" />
+           <img class="img-fluid" src="assets/images/namaste1.jpg" alt="A woman in a red dress meditating" />
          </div>
 
         <div class="col-12 col-lg-6 owner-text">
@@ -97,10 +103,10 @@
         </div>
       </div>
     </section>
-<hr class="hr-small">
-    <section class="container experience">
+
+    <section class="container ">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 experience">
           <h3 class="title-text">My Experience</h3>
         </div>
       </div>
@@ -150,7 +156,7 @@
 
     <div class="row kundalini">
          <div class="col-12 d-sm-none col-md- d-lg-inline-block col-lg-2 col-xl-2 yoga-img">
-             <img src="assets/images/kundalini.jpg" height="250" width="200" alt="woman practicing yoga">
+             <img src="assets/images/yin.jpg" height="250" width="200" alt="A woman practicing yoga">
        </div>
          <div class="col-12 col-lg-7 offset-lg-1 col-xl-8 yoga-text">
             <h5>Kundalini Yoga</h5>
@@ -167,7 +173,7 @@
 
       <div class="row">
         <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
-           <img src="assets/images/yin.jpg" height="250" width="200" alt="woman practicing yoga">
+           <img src="assets/images/feet.jpg" height="250" width="200" alt="Feet of the people in yoga class">
         </div>
         <div class="col-12 col-md-11 col-lg-7 offset-lg-1  yoga-text">
             <h5>Yin Yoga</h5>
@@ -183,7 +189,7 @@
 
       <div class="row">
         <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
-           <img src="assets/images/healing.jpg" height="250" width="200" alt="woman practicing yoga">
+           <img src="assets/images/healing.jpg" height="250" width="200" alt="A woman lying down while a reiki healer has his hands around her head">
         </div>
         <div class="col-12 col-md-11 col-lg-7 offset-lg-1 yoga-text">
             <h5>Reiki</h5>
@@ -200,7 +206,7 @@
 
      <div class="row">
         <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
-           <img src="assets/images/shaman.jpg" height="250" width="200" alt="woman practicing yoga">
+           <img src="assets/images/breathe.png" height="250" width="200" alt="A woman with her eyes closed enjoying the breathwork ceremony">
         </div>
         <div class="col-12 col-md-11 col-lg-7 offset-lg-1 yoga-text">
             <h5>Shamanic Breathwork</h5>
@@ -224,7 +230,7 @@
              <div class="col-12 col-md-11 col-lg-6 col-xl-12 online-session">
                <h3 class="book-session-text">See Upcoming Events</h3>
                <br />
-               <a class="btn btn-book" href="events.html">See Events</a>
+               <a class="btn btn-book" href="events.html">Browse Events</a>
                <br />
              </div>
         </div>
