Fix media queries for index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
            <img class="img-fluid" src="assets/images/namaste1.jpg" alt="A woman in a red dress meditating" />
          </div>
 
-        <div class="col-12 col-lg-6 owner-text">
+        <div class="col-xs-12 col-lg-6 owner-text">
           <h5>
             Most people know me as Ana but as a Kundalini teacher I am proud to
             carry the name Harpreet Seva Kaur.<br /><br />I began my yoga
@@ -155,10 +155,10 @@
     <h3 class="title-text">Methods I use in my practice</h3>
 
     <div class="row kundalini">
-         <div class="col-12 d-sm-none col-md- d-lg-inline-block col-lg-2 col-xl-2 yoga-img">
-             <img src="assets/images/yin.jpg" height="250" width="200" alt="A woman practicing yoga">
+         <div class="col-sm-12 col-md-6  col-lg-4 ">
+             <img src="assets/images/yin.jpg" height="250" width="200" class="yoga-img" alt="A woman practicing yoga">
        </div>
-         <div class="col-12 col-lg-7 offset-lg-1 col-xl-8 yoga-text">
+         <div class="col-12 col-sm-12 col-md-5 col-lg-7  yoga-text">
             <h5>Kundalini Yoga</h5>
             <br/>
                  <p>The ancient yoga practice focuses on breath and asana (postures) along with chanting, meditation, and singing.
@@ -172,10 +172,10 @@
     </div>  
 
       <div class="row">
-        <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
-           <img src="assets/images/feet.jpg" height="250" width="200" alt="Feet of the people in yoga class">
+        <div class="col-12 col-md-6  col-lg-4 ">
+              <img src="assets/images/feet.jpg" height="250" width="200" class="yoga-img" alt="Feet of the people in yoga class">
         </div>
-        <div class="col-12 col-md-11 col-lg-7 offset-lg-1  yoga-text">
+        <div class="col-12 col-md-5 col-lg-7 yoga-text">
             <h5>Yin Yoga</h5>
             <br/>
                 <p>
@@ -188,10 +188,10 @@
     </div>  
 
       <div class="row">
-        <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
-           <img src="assets/images/healing.jpg" height="250" width="200" alt="A woman lying down while a reiki healer has his hands around her head">
+        <div class="col-12 col-md-6 d-lg-inline-block col-lg-4 ">
+           <img src="assets/images/healing.jpg" height="250" width="200" class="yoga-img" alt="A woman lying down while a reiki healer has his hands around her head">
         </div>
-        <div class="col-12 col-md-11 col-lg-7 offset-lg-1 yoga-text">
+        <div class="col-12 col-md-5 col-lg-7  yoga-text">
             <h5>Reiki</h5>
             <br/>
                 <p>
@@ -205,10 +205,10 @@
     </div>
 
      <div class="row">
-        <div class="col-12 col-md-2 d-md-none d-lg-inline-block col-lg-2 yoga-img">
-           <img src="assets/images/breathe.png" height="250" width="200" alt="A woman with her eyes closed enjoying the breathwork ceremony">
+        <div class="col-12 col-md-6  col-lg-4 ">
+           <img src="assets/images/breathe.png" height="250" width="200" class="yoga-img" alt="A woman with her eyes closed enjoying the breathwork ceremony">
         </div>
-        <div class="col-12 col-md-11 col-lg-7 offset-lg-1 yoga-text">
+        <div class="col-12 col-md-5 col-lg-7  yoga-text">
             <h5>Shamanic Breathwork</h5>
             <br/>
                 <p>
@@ -227,7 +227,7 @@
 
     <section class="container">
         <div class="row">
-             <div class="col-12 col-md-11 col-lg-6 col-xl-12 online-session">
+             <div class="col-12 col-md-11 col-lg-12 col-xl-12 online-session">
                <h3 class="book-session-text">See Upcoming Events</h3>
                <br />
                <a class="btn btn-book" href="events.html">Browse Events</a>
