Add  media queries for what-i-do.html

--- a/what-i-do.html
+++ b/what-i-do.html
@@ -53,23 +53,22 @@
 
 <div class="container header-container">
     <div class="row">
-        <div class="col-12 offset-2 what-img">
+        <div class="col-xs-12 offset-lg-2 what-img">
             <img src="assets/images/hand.jpg" alt="A woman holding a crystal pyramid ih her hand" height="500" width="750" class="img-fluid" />
         </div>
-        </div>
-        <div class="row">
-        <div class="col">
+    </div>
+    <div class="row">
+        <div class="col-12">
             <div class="methods-text text-center">
             <i>
                Here you can find more information about each of the methods I use in my yoga and healing practice.
                If you are not sure which one is best suited for you, feel free to contact me for advice. 
             </i>
-            <a class="btn btn-advice text-center" href="contact.html">Ask for Advice</a>
             </div>
-            
-        </div>
+        </div>  
     </div>
 </div>
+<a class="btn btn-advice" href="contact.html">Ask for Advice</a>
 <hr class="hr-large">
 <!-- ======================= End More info section =============================================================== -->
 
@@ -82,7 +81,7 @@
    <h5 class="yoga-heading">Kundalini Yoga</h5>
    <h6 id="yogi">as taught by Yogi Bhajan</h6>
    <div class="row">
-      <div class="col-10 offset-lg-1">
+      <div class="col-12">
         <div class="quote-text">
           <p>
             <i>
@@ -97,7 +96,7 @@
       </div>
     </div>
         <div class="row">
-           <div class="col-12 col-md-6 description-text">
+           <div class="col-12 col-md-6 col-lg-7 description-text">
           <p>
             Kundalini Yoga is a place of transformation, is not to be taken lightly. It is like an express train that shakes
             and wakes you up! We awaken the energy of consciousness, to practice in a way that sheds light on our self-imposed 
@@ -119,7 +118,7 @@
             just come as you are! Welcome to the journey!
         </p>
         </div>
-        <div class="col-12 col-md-5 col-lg-4 kundalini-img">
+        <div class="col-12 col-md-5 col-lg-5 kundalini-img">
             <img class="img-fluid" src="assets/images/river2.jpg" alt="A woman meditating beside the river" />
         </div>
         <button type="submit" class="btn btn-secondary btn-class-kundalini" data-toggle="modal" data-target="#bookClassModal">
@@ -274,7 +273,7 @@
     </button>
 
     <div class="row">
-        <div class="col-12 col-lg-5 offset-1">
+        <div class="col-12 col-lg-5 offset-lg-1">
               <img class="shaman-img img-fluid" src="assets/images/two-women.jpg"  alt="Two women during a shamanic breathwork ceremony">
         </div>
         <div class="col-12 col-lg-5">
